@@ -1,4 +1,4 @@
-# $NetBSD: Makefile.common,v 1.23 2021/12/24 15:57:23 wiz Exp $
+# $NetBSD: Makefile.common,v 1.24 2021/12/24 16:07:12 wiz Exp $
 
 # used by databases/py-trytond-ldap-authentication
 # used by devel/py-proteus/Makefile
@@ -101,7 +101,6 @@
 # used by misc/py-trytond-stock-split/Makefile
 # used by misc/py-trytond-stock/Makefile
 # used by security/py-trytond-authentication-sms/Makefile
-# used by time/py-trytond-calendar-classification/Makefile
 # used by time/py-trytond-calendar/Makefile
 # used by time/py-trytond-company-work-time/Makefile
 # used by time/py-trytond-timesheet-cost/Makefile
@@ -164,7 +163,6 @@ MODULE_REVISION.trytond_analytic_sale=				0
 MODULE_REVISION.trytond_authentication_sms=			0
 MODULE_REVISION.trytond_bank=					0
 MODULE_REVISION.trytond_calendar=				1
-MODULE_REVISION.trytond_calendar_classification=		0
 MODULE_REVISION.trytond_carrier=				0
 MODULE_REVISION.trytond_carrier_percentage=			0
 MODULE_REVISION.trytond_carrier_weight=				0
