@@ -1,5 +1,0 @@
-$NetBSD: distinfo,v 1.3 2021/10/26 11:24:35 nia Exp $
-
-BLAKE2s (tryton-4.2/trytond_calendar_classification-4.2.0.tar.gz) = 1ec6b041a1030668e85b65aced9cd571515fafeeef6221b387359ce71e67bf56
-SHA512 (tryton-4.2/trytond_calendar_classification-4.2.0.tar.gz) = bf5bfd7f0ee0376238a85ba9245cbf90568469cd1a4c940956ea1f01718b358b4df44ed5a7023f6bb9c60e0e8aaf1d8fb40ff4d6347314fe4044a80c8eb4287a
-Size (tryton-4.2/trytond_calendar_classification-4.2.0.tar.gz) = 19109 bytes
